--- a/styles.scss
+++ b/styles.scss
@@ -20,6 +20,12 @@
 //==============================================================================
 //=====     FONT CLASSES
 //==============================================================================
+.large {
+  font-size: 1.5em;
+}
+.bold {
+  font-weight: bold;
+}
 .code {
   font-family: 'VT323', monospace;
 }
