--- a/_header.scss
+++ b/_header.scss
@@ -19,6 +19,7 @@ header ul {
     a {
       text-decoration: none;
       text-transform: uppercase;
+      font-weight: bold;
       color: #000;
       margin-left: 10px;
        &:hover {
