adjusted the header and banner

--- a/_header.scss
+++ b/_header.scss
@@ -1,7 +1,8 @@
 header {
   display: flex;
   justify-content: space-between;
-  background-color: #a2a6ad;
+  // background-color: #a2a6ad;
+  background-color: #fff;
   padding: 0 5% 0 5%;
   font-family: 'Poiret One', cursive;
   border-bottom: 2px solid #000;
