--- a/_mainPgCntnt1.scss
+++ b/_mainPgCntnt1.scss
@@ -1,8 +1,15 @@
+.contentContainer {
+  width: 100%;
+  background-color: #4c4845;
+  padding: 10% 0;
+  margin-top: -8%;
+}
 .mainPgCntnt1 {
-  margin: 100px 5% 0 5%;
+  margin: 0 5% 0 5%;
   width: 90%;
   font-family:'Montserrat', sans-serif;
   border: 1px solid #a2a6ad;
+  background-color: #fff;
 }
 
 .terminalNavBar {
