updated banner and added content container for about

--- a/_banner.scss
+++ b/_banner.scss
@@ -4,8 +4,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 20% 0 30% 3%;
+  padding: 15% 0 25% 3%;
   font-family:'Montserrat', sans-serif;
-  font-size: 6vw;
+  font-size: 5vw;
   // height: 980px;
+}
+.htmlText {
+  font-size: 2vw;
 }
