--- a/_mainPgCntnt1.scss
+++ b/_mainPgCntnt1.scss
@@ -3,10 +3,12 @@
   background-color: #4c4845;
   padding: 10% 0;
   margin-top: -8%;
+  display: flex;
+  justify-content: space-between;
 }
 .mainPgCntnt1 {
-  margin: 0 5% 0 5%;
-  width: 90%;
+  margin: 0 0 0 5%;
+  width: 40%;
   font-family:'Montserrat', sans-serif;
   border: 1px solid #a2a6ad;
   background-color: #fff;
@@ -45,6 +47,12 @@
 
 .btnRed:hover {
   background-color: #ff1500 !important;
+}
+
+.mainPgCntnt2 {
+  width: 40%;
+  border: 1px solid red;
+  margin-right: 5%;
 }
 //================================================ BLINKING CURSOR START
 .blinking-cursor {
@@ -104,20 +112,8 @@
 }
 //================================================ BLINKING CURSOR END
 
-// header ul {
-//   list-style-type: none;
-//   margin: auto 0;
-//     li {
-//       display: inline-block;
-//     }
-//     a {
-//       text-decoration: none;
-//       text-transform: uppercase;
-//       font-weight: bold;
-//       color: #000;
-//       margin-left: 10px;
-//        &:hover {
-//          text-decoration: underline;
-//        }
-//     }
+// .scrollContainer {
+//   overflow: scroll;
+//   width: 100%;
+//   height: 100%;
 // }
