--- a/_work.scss
+++ b/_work.scss
@@ -48,11 +48,11 @@
 }
 .workExamples2 {
   margin-top: 0;
+  margin-bottom: 15%;
 }
 .example {
   width: 300px;
   height: 200px;
-  border: 1px solid red;
   margin-top: 2%;
     img {
       width: 100%;
